# culors

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE  README.md  package-lock.json  package.json
.githooks/: pre-commit
.github/workflows/: ci.yml
docs/plans/: 2026-05-03-culor-rust-port-design.md  2026-05-03-culor-v0.1-foundation.md
fixtures-gen/: README.md  check-drift.mjs  color-mix-ref.mjs  convert-to-fixtures.mjs  format-fixtures.mjs  generate.mjs  inputs.mjs  parse-fixtures.mjs  parse-inputs.mjs
src/: average.rs  color.rs  convert.rs  lerp.rs  lib.rs  map.rs  nearest.rs  random.rs  round.rs  samples.rs  traits.rs  util.rs
src/blend/: mod.rs  modes.rs  non_separable.rs
src/contrast/: mod.rs  wcag.rs
src/difference/: ciede2000.rs  ciede76.rs  ciede94.rs  cmc.rs  euclidean.rs  extract.rs  hue.rs  hyab.rs  mod.rs  stub.rs
src/easing/: mod.rs
src/filter/: adjust.rs  common.rs  deficiency.rs  mod.rs
src/format/: css.rs  hex.rs  hsl.rs  mod.rs  rgb.rs
src/gamut/: clamp.rs  in_gamut.rs  (+2 more)
tests/: convert_to_fixtures.rs  fixtures.rs  format_fixtures.rs  parse_fixtures.rs  ported_a98.rs  ported_average.rs  ported_blend.rs  ported_cat.rs  ported_clamp.rs  ported_clamp_wide_gamut.rs  ported_color_mix.rs  ported_contrast.rs  ported_convert.rs  ported_convert_to.rs  ported_converter.rs  ported_cubehelix.rs  ported_difference.rs  ported_dlab.rs  ported_dlch.rs  ported_easing.rs  ported_filter.rs  ported_fixup_alpha.rs  ported_fixup_hue.rs  ported_format.rs  ported_formatter.rs  ported_gamut.rs  ported_hpluv.rs  ported_hsi.rs  ported_hsl.rs  ported_hsluv.rs  ported_hsv.rs  ported_hwb.rs  ported_interpolate.rs  ported_interpolate_premultiplied.rs  ported_interpolator_linear.rs  ported_itp.rs  ported_jab.rs  ported_jch.rs  ported_lab.rs  ported_lab65.rs  (+32 more)
(+1029 files in other folders)
