[package]
name = "culors"
version = "1.6.0"
edition = "2021"
rust-version = "1.75"
description = "Rust port of the culori color library — color spaces, parsing, conversion"
license = "MIT"
homepage = "https://github.com/koole/culors"
repository = "https://github.com/koole/culors"
documentation = "https://docs.rs/culors"
readme = "README.md"
authors = ["Leon Koole <claude@koole.io>"]
keywords = ["color", "rgb", "lab", "oklab", "css"]
categories = ["graphics", "multimedia::images"]
exclude = [
    "/.github/",
    "/docs/",
    "/fixtures-gen/",
    "/package.json",
    "/package-lock.json",
]

[features]
default = []
serde = ["dep:serde"]

[dependencies]
serde = { version = "1", optional = true, features = ["derive"] }

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["float_roundtrip"] }
